--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
   <div class="container">
     <div class="input-box">
       <i class="fas fa-eye-slash show_hide"></i>
-      <input type="password" placeholder="Enter Password">
+      <input type="password" spellcheck="false" placeholder="Enter Password">
     </div>
     <div class="indicator">
       <div class="icon-text">
         <i class="fas fa-exclamation-circle error_icon"></i>
-        <h6>Password es débil</h6>
+        <h6 class="text"></h6>
       </div>
     </div>
   </div>
